# timekeeper-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
docs/: build.md
src/: exiftool.rs  lib.rs  main.rs  metadata.rs  stats.rs
